package com.example.starwarsapp.domain.utils

object TestingTags {
    const val FILMS_LIST = "films_list"
    const val PEOPLE_LIST = "people_list"
    const val PLANETS_LIST = "peoples_list"
    const val SPECIES_LIST = "species_list"
    const val STARSHIPS_LIST = "starships_list"
    const val VEHICLES_LIST = "vehicles_list"
    const val FAVORITES_BUTTON = "vehicles_button"
    const val HOME_BUTTON = "home_button"
}