...
                contentDescription = "Change Theme",
                modifier = Modifier.size(24.dp),
                tint = MaterialTheme.colorScheme.secondary
            )
        }
        Text(
            text = "STAR WARS",
            style = MaterialTheme.typography.headlineLarge,
            color = MaterialTheme.colorScheme.secondary
        )
        IconButton(
            onClick = { navController.navigate(Screen.Favorites.route) },
            modifier = Modifier.testTag(TestingTags.FAVORITES_BUTTON)) {
...
