<resources>
    <string name="app_name">Star Wars App</string>
    <string name="star_wars">star wars</string>
    <string name="people">people</string>
    <string name="films">films</string>
    <string name="planets">planets</string>
    <string name="species">species</string>
    <string name="starships">starships</string>
    <string name="vehicles">vehicles</string>
    <string name="height">height</string>
    <string name="mass">mass</string>
    <string name="hair_color">hair color</string>
    <string name="skin_color">skin color</string>
    <string name="eye_color">eye color</string>
    <string name="birth_year">birth year</string>
    <string name="gender">gender</string>
    <string name="planet">planet</string>
    <string name="opening_crawl">opening crawl</string>
    <string name="director">director</string>
    <string name="producer">producer</string>
    <string name="release_date">release date</string>
    <string name="characters">characters</string>
    <string name="name">name</string>
    <string name="rotation_period">rotation_period</string>
    <string name="orbital_period">orbital_period</string>
    <string name="diameter">diameter</string>
    <string name="climate">climate</string>
    <string name="gravity">gravity</string>
    <string name="terrain">terrain</string>
    <string name="surface_water">surface water</string>
    <string name="population">population</string>
    <string name="residents">residents</string>
    <string name="classification">classification</string>
    <string name="designation">designation</string>
    <string name="average_height">average height</string>
    <string name="skin_colors">skin colors</string>
    <string name="hair_colors">hair colors</string>
    <string name="eye_colors">eye colors</string>
    <string name="average_lifespan">average lifespan</string>
    <string name="home_world">home world</string>
    <string name="language">language</string>
    <string name="model">model</string>
    <string name="manufacturer">manufacturer</string>
    <string name="cost_in_credits">cost in credits</string>
    <string name="length">length</string>
    <string name="max_atmosphering_speed">max atmosphering speed</string>
    <string name="crew">crew</string>
    <string name="passengers">passengers</string>
    <string name="cargo_capacity">cargo capacity</string>
    <string name="consumables">consumables</string>
    <string name="hyper_drive_rating">hyper drive rating</string>
    <string name="MGLT">MGLT</string>
    <string name="starship_class">starship class</string>
    <string name="pilots">pilots</string>
    <string name="vehicle_class">vehicle class</string>
    <string name="favorites">favorites</string>
    <string name="reverse">reverse</string>
    <string name="clear">clear</string>
    <string name="no_data_found">no data found</string>

</resources>